--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
   gtag('config', 'G-7SJ89HFYRC');
 </script>
 <!-- ads -->
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8813942126944836"
+     crossorigin="anonymous"></script>
 
 </head>
 	<body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
