--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <link rel="icon" href="images/favicon.png" sizes="32x32">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>slope2unblocked - Fullscreen, Ad-Free, Unblocked</title>
-        <meta name="description" content="slope2unblocked - Cool ball game, safe for kids. Free, ad-free, and thrilling. Guide the ball through dynamic courses. Play now!">
+    <title>Slope 2: Fullscreen, Ad-Free, Unblocked</title>
+        <meta name="description" content="Slope 2 & Slope - Unblocked: cool ball game, safe for kids. Free, ad-free, and thrilling. Guide the ball through dynamic courses. Play now!">
     
       <meta property="og:url" content="lnahtml.github.io" />
       <meta property="og:image:width" content="200 px" />
       <meta property="og:image:height" content="200 px" />
       <meta property="og:title" content="lnahtml.github.io" />
       <meta property="og:site_name" content="lnahtml.github.io" />
-      <meta property="og:description" content="slope2unblocked - Cool ball game, safe for kids. Free, ad-free, and thrilling. Guide the ball through dynamic courses. Play now!" />
+      <meta property="og:description" content="Slope 2 & Slope - Unblocked: cool ball game, safe for kids. Free, ad-free, and thrilling. Guide the ball through dynamic courses. Play now!" />
       <meta property="og:type" content="website" />
       <meta property="og:image" content="images/icon_game.png">
 
@@ -424,89 +424,37 @@ a:hover{color: red;}
 	
 
 <div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/tiny-fishing.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/tiny-fishing.png" class="lazyload" alt="Tiny Fishing" title="Tiny Fishing">
-        <div class="list-title" style="text-align:center;">Tiny Fishing</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/eugenes-life.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/eugenes-life.png" class="lazyload" alt="Eugenes Life" title="Eugenes Life">
-        <div class="list-title" style="text-align:center;">Eugenes Life</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/master-chess.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/master-chess.png" class="lazyload" alt="Master Chess" title="Master Chess">
-        <div class="list-title" style="text-align:center;">Master Chess</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/idle-ants.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/idle-ants.png" class="lazyload" alt="Idle Ants" title="Idle Ants">
-        <div class="list-title" style="text-align:center;">Idle Ants</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/stickman-climb-2.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/stickman-climb-2.png" class="lazyload" alt="Stickman Climb 2" title="Stickman Climb 2">
-        <div class="list-title" style="text-align:center;">Stickman Climb 2</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/stick-defenders.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/stick-defenders.png" class="lazyload" alt="Stick Defenders" title="Stick Defenders">
-        <div class="list-title" style="text-align:center;">Stick Defenders</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
   <a href="/play/crazy-cars.html">
   <div class="game-item">
     <div class="list-game">
       <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/crazy-cars.png" class="lazyload" alt="Crazy Cars" title="Crazy Cars">
         <div class="list-title" style="text-align:center;">Crazy Cars</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/brain-test-tricky-puzzles.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/brain-test-tricky-puzzles.png" class="lazyload" alt="Brain Test: Tricky Puzzles" title="Brain Test: Tricky Puzzles">
+        <div class="list-title" style="text-align:center;">Brain Test: Tricky Puzzles</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/football-legends.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/football-legends.png" class="lazyload" alt="Football Legends" title="Football Legends">
+        <div class="list-title" style="text-align:center;">Football Legends</div>
       </div>
     </div>
   </div>
@@ -528,11 +476,11 @@ a:hover{color: red;}
 
 
 <div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/dreadhead-parkour.html">
+  <a href="/play/tiny-fishing.html">
   <div class="game-item">
     <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/dreadhead-parkour.png" class="lazyload" alt="Dreadhead Parkour" title="Dreadhead Parkour">
-        <div class="list-title" style="text-align:center;">Dreadhead Parkour</div>
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/tiny-fishing.png" class="lazyload" alt="Tiny Fishing" title="Tiny Fishing">
+        <div class="list-title" style="text-align:center;">Tiny Fishing</div>
       </div>
     </div>
   </div>
@@ -541,167 +489,11 @@ a:hover{color: red;}
 
 
 <div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/temple-run-2.html">
+  <a href="/play/blumgi-ball.html">
   <div class="game-item">
     <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/temple-run-2.png" class="lazyload" alt="Temple Run 2" title="Temple Run 2">
-        <div class="list-title" style="text-align:center;">Temple Run 2</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/tunnel-rush.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/tunnel-rush.png" class="lazyload" alt="Tunnel Rush" title="Tunnel Rush">
-        <div class="list-title" style="text-align:center;">Tunnel Rush</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/gobble.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/gobble.png" class="lazyload" alt="Gobble" title="Gobble">
-        <div class="list-title" style="text-align:center;">Gobble</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/drive-mad.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/drive-mad.png" class="lazyload" alt="Drive Mad" title="Drive Mad">
-        <div class="list-title" style="text-align:center;">Drive Mad</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/getaway-shootout.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/getaway-shootout.png" class="lazyload" alt="Getaway Shootout" title="Getaway Shootout">
-        <div class="list-title" style="text-align:center;">Getaway Shootout</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/n-gon.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/n-gon.png" class="lazyload" alt="N Gon" title="N Gon">
-        <div class="list-title" style="text-align:center;">N Gon</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/blumgi-slime.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/blumgi-slime.png" class="lazyload" alt="Blumgi Slime" title="Blumgi Slime">
-        <div class="list-title" style="text-align:center;">Blumgi Slime</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/blumgi-rocket.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/blumgi-rocket.png" class="lazyload" alt="Blumgi Rocket" title="Blumgi Rocket">
-        <div class="list-title" style="text-align:center;">Blumgi Rocket</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/stacktris.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/stacktris.png" class="lazyload" alt="Stacktris" title="Stacktris">
-        <div class="list-title" style="text-align:center;">Stacktris</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/g-switch-3.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/g-switch-3.png" class="lazyload" alt="G Switch 3" title="G Switch 3">
-        <div class="list-title" style="text-align:center;">G Switch 3</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/who-is.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/who-is.png" class="lazyload" alt="Who Is" title="Who Is">
-        <div class="list-title" style="text-align:center;">Who Is</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/stack.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/stack.png" class="lazyload" alt="Stack" title="Stack">
-        <div class="list-title" style="text-align:center;">Stack</div>
-      </div>
-    </div>
-  </div>
-  </a>
-</div>
-
-
-<div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/escaping-the-prison.html">
-  <div class="game-item">
-    <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/escaping-the-prison.png" class="lazyload" alt="Escaping The Prison" title="Escaping The Prison">
-        <div class="list-title" style="text-align:center;">Escaping The Prison</div>
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/blumgi-ball.png" class="lazyload" alt="Blumgi Ball" title="Blumgi Ball">
+        <div class="list-title" style="text-align:center;">Blumgi Ball</div>
       </div>
     </div>
   </div>
@@ -723,11 +515,219 @@ a:hover{color: red;}
 
 
 <div class="col-lg-2 col-md-4 col-6 grid-3">
-  <a href="/play/stick-merge.html">
+  <a href="/play/who-is.html">
   <div class="game-item">
     <div class="list-game">
-      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/stick-merge.png" class="lazyload" alt="Stick Merge" title="Stick Merge">
-        <div class="list-title" style="text-align:center;">Stick Merge</div>
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/who-is.png" class="lazyload" alt="Who Is" title="Who Is">
+        <div class="list-title" style="text-align:center;">Who Is</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/house-of-hazards.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/house-of-hazards.png" class="lazyload" alt="House Of Hazards" title="House Of Hazards">
+        <div class="list-title" style="text-align:center;">House Of Hazards</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/tunnel-rush.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/tunnel-rush.png" class="lazyload" alt="Tunnel Rush" title="Tunnel Rush">
+        <div class="list-title" style="text-align:center;">Tunnel Rush</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/stickman-climb-2.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/stickman-climb-2.png" class="lazyload" alt="Stickman Climb 2" title="Stickman Climb 2">
+        <div class="list-title" style="text-align:center;">Stickman Climb 2</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/water-color-sort.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/water-color-sort.png" class="lazyload" alt="Water Color Sort" title="Water Color Sort">
+        <div class="list-title" style="text-align:center;">Water Color Sort</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/temple-of-boom.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/temple-of-boom.png" class="lazyload" alt="Temple Of Boom" title="Temple Of Boom">
+        <div class="list-title" style="text-align:center;">Temple Of Boom</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/penalty-shooters-2.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/penalty-shooters-2.png" class="lazyload" alt="Penalty Shooters 2" title="Penalty Shooters 2">
+        <div class="list-title" style="text-align:center;">Penalty Shooters 2</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/n-gon.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/n-gon.png" class="lazyload" alt="N Gon" title="N Gon">
+        <div class="list-title" style="text-align:center;">N Gon</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/monster-tracks.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/monster-tracks.png" class="lazyload" alt="Monster Tracks" title="Monster Tracks">
+        <div class="list-title" style="text-align:center;">Monster Tracks</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/drift-hunters.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/drift-hunters.png" class="lazyload" alt="Drift Hunters" title="Drift Hunters">
+        <div class="list-title" style="text-align:center;">Drift Hunters</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/red-ball-4.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/red-ball-4.png" class="lazyload" alt="Red Ball 4" title="Red Ball 4">
+        <div class="list-title" style="text-align:center;">Red Ball 4</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/moto-x3m-winter.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/moto-x3m-winter.png" class="lazyload" alt="Moto X3m Winter" title="Moto X3m Winter">
+        <div class="list-title" style="text-align:center;">Moto X3m Winter</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/murder.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/murder.png" class="lazyload" alt="Murder" title="Murder">
+        <div class="list-title" style="text-align:center;">Murder</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/madalin-stunt-cars-2.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/madalin-stunt-cars-2.png" class="lazyload" alt="Madalin Stunt Cars 2" title="Madalin Stunt Cars 2">
+        <div class="list-title" style="text-align:center;">Madalin Stunt Cars 2</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/sausage-flip.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/sausage-flip.png" class="lazyload" alt="Sausage Flip" title="Sausage Flip">
+        <div class="list-title" style="text-align:center;">Sausage Flip</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/subway-surfers-newyork.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/subway-surfers-newyork.png" class="lazyload" alt="Subway Surfers Newyork" title="Subway Surfers Newyork">
+        <div class="list-title" style="text-align:center;">Subway Surfers Newyork</div>
+      </div>
+    </div>
+  </div>
+  </a>
+</div>
+
+
+<div class="col-lg-2 col-md-4 col-6 grid-3">
+  <a href="/play/blumgi-rocket.html">
+  <div class="game-item">
+    <div class="list-game">
+      <div class="list-thumbnail"><img src="https://lnahtml.github.io/img/blumgi-rocket.png" class="lazyload" alt="Blumgi Rocket" title="Blumgi Rocket">
+        <div class="list-title" style="text-align:center;">Blumgi Rocket</div>
       </div>
     </div>
   </div>
